--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -46,13 +46,14 @@
     margin-left: auto;
     margin-right: auto;
     background-color: var(--dark-gray);
+    transition: 200ms ease-in-out;
     border-radius: 15px;
     padding: .25rem .5rem;
     color: var(--font-light-color);
 }
 
 .shop-link:hover {
-    color: var(--link-color);
+    background-color: black;
 }
 
 .cover__full{
