--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,8 @@
 :root {
   --main-bg-color: beige;
   --secondary-bg-color: white;
-  --light-gray: #c4c4c4;
-  --dark-gray: #606060;
+  --light-gray: #dddddd;
+  --dark-gray: #4f4f4f;
   --font-light-color: white;
   --font-dark-color: black;
   --link-color: blue;
